dist/manifests/kubernetes-cluster-manifests/efk/elasticsearch-statefulset.yaml
# Elasticsearch deployment itself
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    version: "v5.6.2"
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
    
spec:
  serviceName: elasticsearch-logging
  replicas: 1

  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: "v5.6.2"
      
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: "v5.6.2"
        kubernetes.io/cluster-service: "true"
        

      # annotations:
    spec:
      serviceAccountName: elasticsearch-logging
      volumes:
      - name: elasticsearch-logging
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
      containers:
      - name: elasticsearch
        image: bossjones/elasticsearch:v5.6.2
        imagePullPolicy: Always
        # command:

        volumeMounts:
        - name: elasticsearch-logging
          mountPath: /data

        resources:
          # need more cpu upon initialization, therefore burstable class
          requests:
            cpu: 100m
            memory: 2350Mi
          limits:
            cpu: 2
            memory: 4048Mi

        securityContext:
          # runAsNonRoot: true
          # runAsUser: 65534
          privileged: true

        livenessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 300
          timeoutSeconds: 10

        # readinessProbe:

        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        - containerPort: 1099
          name: jmx
          protocol: TCP

      # sidecar disabled

      # hostNetwork:

      # hostPID:

      nodeSelector:
        beta.kubernetes.io/os: linux
        # kubernetes.io/hostname: "k8s-head"
  # volumeClaimTemplates:
# volumeClaimTemplates:
# - metadata:
#     name: zookeeper-vol
#   spec:
#     accessModes:
#       - ReadWriteOnce
#     resources:
#       requests:
#         storage: 8Gi
#     storageClassName: rbd


# SOURCE: https://github.com/alonana/kubernetes/blob/b98cd3e7cf413f2eb9eb0124b9e02099655dd224/envoy-logrotate/k8s/statefulset.yaml
#       - name: logrotate
#         image: AK8S_DOCKER_REPOSITORY/logrotate:1.0.0
#         volumeMounts:
#           - name: logs-volume
#             mountPath: /logs
