dist/manifests/kubernetes-cluster-manifests/efk/fluentd-es-ds.yaml
# SOURCE: https://github.com/kubernetes/kubernetes/tree/master/cluster/addons/fluentd-elasticsearch
# SOURCE: https://kubernetes.io/docs/tasks/debug-application-cluster/logging-elasticsearch-kibana/
# ----------------------------------------------------------------
# Fluentd
# ----------------------------------------------------------------
# Fluentd is deployed as a DaemonSet which spawns a pod on each node that reads logs, generated by kubelet, container runtime and containers and sends them to Elasticsearch.

# Note: in order for Fluentd to work, every Kubernetes node must be labeled with beta.kubernetes.io/fluentd-ds-ready=true, as otherwise the Fluentd DaemonSet will ignore them.

# Learn more in the official Kubernetes documentation.

# Known problems
# Since Fluentd talks to the Elasticsearch service inside the cluster, instances on masters won't work, because masters have no kube-proxy. Don't mark masters with the label mentioned in the previous paragraph or add a taint on them to avoid Fluentd pods scheduling there.
# ----------------------------------------------------------------
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-es-v2.2.1
  namespace: kube-system
  labels:
    k8s-app: fluentd-es
    version: v2.2.1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
    
spec:
  selector:
    matchLabels:
        k8s-app: fluentd-es
        # version: v2.2.1
        
  # updateStrategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: fluentd-es
        # kubernetes.io/cluster-service: "true"
        # version: v2.2.1
        # boss-part-of: efk
        
      # This annotation ensures that fluentd does not get evicted if the node
      # supports critical pod annotation based priority scheme.
      # Note that this does not guarantee admission on the nodes (#40573).
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
        
    spec:
      priorityClassName: system-node-critical
      # serviceAccount: fluentd-es
      serviceAccountName: fluentd-es
      nodeSelector:
        beta.kubernetes.io/fluentd-ds-ready: "true"
      # Minimize downtime during a rolling upgrade or deletion; tell Kubernetes to do a "force
      # deletion": https://kubernetes.io/docs/concepts/workloads/pods/pod/#termination-of-pods.
      terminationGracePeriodSeconds: 0
      # tolerations:
      #   # Make sure fluentd-es gets scheduled on all nodes.
      #   - effect: NoSchedule
      #     operator: Exists
      #   # Mark the pod as a critical add-on for rescheduling.
      #   - key: CriticalAddonsOnly
      #     operator: Exists
      #   - effect: NoExecute
      #     operator: Exists
      containers:
      - name: fluentd-es
        # image: image: k8s.gcr.io/fluentd-elasticsearch:v2.2.0
        # SOURCE: https://github.com/kubernetes/kubernetes/blob/master/cluster/addons/fluentd-elasticsearch/fluentd-es-image/Dockerfile
        # image: gcr.io/google-containers/fluentd-elasticsearch:v2.2.1
        # image: k8s.gcr.io/fluentd-elasticsearch:v2.2.0
        image: bossjones/fluentd-elasticsearch:v2.3.0
        imagePullPolicy: Always
        # FIXME: Try using this guy instead
        # SOURCE: https://github.com/fluent/fluentd-kubernetes-daemonset/tree/master/docker-image/v1.3/debian-elasticsearch
        # image: fluent/fluentd-kubernetes-daemonset:elasticsearch
        securityContext:
          runAsNonRoot: false
          # runAsUser: 65534
          privileged: true
          

        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            memory: 500Mi
            # memory: 200Mi
          

        volumeMounts:
          # - name: libsystemddir
          #   mountPath: /host/lib
          #   readOnly: true
          - name: varlog
            mountPath: /var/log
          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
            readOnly: true
          - name: config-volume
            mountPath: /etc/fluent/config.d
          - name: docker-sock
            # ORIG # mountPath: /var/run/docker.sock
            mountPath: /run/containerd/containerd.sock
          - name: varrun
            mountPath: /var/run
          - name: libsystemd
            # mountPath: /usr/lib64/libsystemd.so.0
            mountPath: /lib/x86_64-linux-gnu/libsystemd.so.0
          
      volumes:
        # It is needed to copy systemd library to decompress journals
        # - name: libsystemddir
        #   hostPath:
        #     path: /usr/lib64
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: config-volume
          configMap:
            # name: fluentd-es-config-v0.1.0
            name: fluentd-es-config-v0.1.6
        - name: docker-sock
          hostPath:
            # path: /var/run/docker/libcontainerd/docker-containerd.sock
            path: /var/run/docker/containerd/containerd.sock
        - name: varrun
          hostPath:
            path: /var/run
        - name: libsystemd
          hostPath:
            path: /usr/lib64/libsystemd.so.0
