dist/manifests/kubernetes-cluster-manifests/efk/kibana-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
    
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
      
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
        
    spec:
      nodeSelector:
        kubernetes.io/hostname: "k8s-node-1"
        
      # SOURCE: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
      containers:
      - name: kibana-logging
        imagePullPolicy: Always
        # image: docker.elastic.co/kibana/kibana:5.6.2
        image: bossjones/kibana:5.6.2
        # resources:
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
