dist/manifests/kubernetes-cluster-manifests/efk/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
    boss-part-of: efk
    
  # annotations:
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9200
      protocol: TCP
      targetPort: db
    # NOTE: These 2 are new 5/18/2019
    - name: transport
      port: 9300
      targetPort: transport
      protocol: TCP
    - name: jmx
      port: 1099
      targetPort: jmx
      protocol: TCP
    
  selector:
    k8s-app: elasticsearch-logging
